languages/bevy_mod_scripting_lua_derive/tests/fail/invalid-argument-count.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/fail/invalid-argument-count.rs:8:8
   |
8  |     fn my_fn(&self);
   |        ^^^^^------- an argument of type `usize` is missing
   |
note: method defined here
  --> tests/fail/invalid-argument-count.rs:14:12
   |
14 |     pub fn my_fn(&self, _: usize) {}
   |            ^^^^^        --------
help: provide the argument
   |
8  |     fn my_fn(/* usize */);
   |             ~~~~~~~~~~~~~
